# poccuri.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  composite.cpp  functions.cpp  main.cpp  variable.cpp
scripts/: build.sh  run.sh  test.sh
src/: main.cpp
src/function/: add.cpp
src/tensor/: tensor.cpp
tests/: test_sample.cpp
